server/deploy/k8s/04-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: sdn
  labels:
    app.kubernetes.io/name: sdn-project
    app.kubernetes.io/component: mongodb
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
